Ajustes introdução e capitulo 2

--- a/tcc.tex
+++ b/tcc.tex
@@ -181,7 +181,7 @@ A todos vocês, minha sincera gratidão.
 
 \begin{abstract}
 
-O portal de algoritmos da Universidade de Caxias do Sul encontra-se tecnologicamente defasado, com falhas de segurança e pouca usabilidade
+O portal de algoritmos da Universidade de Caxias do Sul encontra-se tecnologicamente defasado, com falhas de segurança e pouca usabilidade.
 
 Utilizando-se de metodologias da engenharia de \textit{software} será realizada a evolução do portal de algoritmos. Levando em consideração a necessidade de facilitar adaptações e manutenções futuras que ocorrem no ciclo de vida de um \textit{software}.
 
