--- a/conteudo/capitulo2.tex
+++ b/conteudo/capitulo2.tex
@@ -59,8 +59,8 @@ A Figura \ref{imgReengenhariaSoftware} demonstra o processo geral da reengenhari
 \begin{enumerate}
 	\item Tradução de código-fonte: através de alguma ferramenta de tradução, o programa é convertido para uma versão mais atual da linguagem ou para outra diferente.
 	\item Engenharia reversa: o programa é analisado e as informações são extraídas a partir dele.
-	\item Melhoria na estrutura de programa: a estrutura de controle é analisada e modificada para que se torne mais fácil de ler e entender. 
-	\item Modularização de programa: partes relacionadas do programa são agrupadas, e onde houver redundância, se apropriado, esta é removida. Em alguns casos, esse estágio pode envolver refatoração de arquitetura. 
+	\item Melhoria na estrutura de programa: a estrutura de controle é analisada e modificada para que se torne mais fácil de ler e entender.
+	\item Modularização de programa: partes relacionadas do programa são agrupadas, e onde houver redundância, se apropriado, esta é removida. Em alguns casos, esse estágio pode envolver refatoração de arquitetura.
 	\item Reengenharia dos dados: os dados processados pelo programa são alterados para refletir as mudanças de programa.
 \end{enumerate}
 
@@ -111,11 +111,11 @@ De acordo com \citet{Sommerville2011}, essas atividades fazem parte do processo 
 
 Para melhor entendimento desses processos, nas próximas seções serão descritas com mais detalhes algumas dessas atividades.
 
-\section{Engenharia de requisitos}
+\section{Engenharia de Requisitos}
 
 Engenharia de requisitos de sistemas basicamente é o conjunto das descrições do que o sistema deve fazer, o que ele oferece de serviço e restrições a seu funcionamento \citet{Sommerville2011}. A engenharia de requisitos abrange sete tarefas distintas: concepção, levantamento, elaboração, negociação, especificação, validação e gestão, onde geralmente algumas ocorrem em paralelo e todas podem ser adaptadas à necessidade de cada projeto \cite{Pressman2011}
 
-Somente descrever os requisitos não é suficiente, é preciso entender o que está descrito, e essa é uma das tarefas mais difíceis enfrentadas por um engenheiro de \textit{software}. 
+Somente descrever os requisitos não é suficiente, é preciso entender o que está descrito, e essa é uma das tarefas mais difíceis enfrentadas por um engenheiro de \textit{software}.
 
 Os requisitos de \textit{software} frequentemente são classificados em funcionais e não-funcionais.
 
@@ -151,7 +151,7 @@ Para desenvolver um projeto, é necessário uma metodologia. Nesse trabalho, será 
 
 A metodologia ICONIX foi elaborada por Doug Rosenberg e Kendal Scott, a partir de um processo simples e unificado dos pesquisadores Booch, Rumbaugh e Jacobson \cite{Rosenberg2005}.
 
-As vantagens de se utilizar a metodologia ICONIX são: metodologia prática, simples, especifica de forma objetiva e possui rastreabilidade dos requisitos \cite{Rosenberg2005}. 
+As vantagens de se utilizar a metodologia ICONIX são: metodologia prática, simples, específica de forma objetiva e possui rastreabilidade dos requisitos \cite{Rosenberg2005}.
 
 A metodologia ICONIX utiliza-se de um subconjunto da \ac{UML} no qual apenas 4 diagramas são utilizados: diagramas de classe, diagrama de sequência, diagrama de robustez e caso de usos \cite{Rosenberg2005}.
 
@@ -190,7 +190,7 @@ A Figura \ref{imgExSequencia} pode ser lida da seguinte maneira:
 
 \begin{enumerate}
 	\item A recepcionista do médico aciona o método VerInfo em uma instância P da classe de objeto InfoPaciente, fornecendo o identificador do paciente (PID, do inglês \textit{patient's identifier}). A instância P é um objeto de interface  do usuário, exibido como um formulário  que mostra os dados do paciente.
-	\item A instância P chama o banco de dados para retornar as informações necessárias, fornecendo o identificador da recepcionista, que permite a verificação de proteção (nessa fase, não importa de onde vem o esse UID - do inglês,\textit{user's identifier}).
+	\item A instância P chama o banco de dados para retornar as informações necessárias, fornecendo o identificador da recepcionista, que permite a verificação de proteção (nessa fase, não importa de onde vem o esse UID - do inglês, \textit{user's identifier}).
 	\item O banco de dados verifica, com o sistema de autorização, que o usuário está autorizado a essa ação.
 	\item Se autorizado, as informações de pacientes são retornadas, e um formulário é preenchido na tela do usuário. Se falhar a autorização, aparece uma mensagem de erro.
 \end{enumerate}
@@ -216,7 +216,7 @@ Como podemos observar na Figura \ref{imgExRobustez} o ator usuário clica no ``íc
 
 A Figura \ref{imgExCasoUso} representa o caso de uso de transferência de dados que envolve os atores Recepcionista do médico e Sistema de registro de pacientes \cite{Sommerville2011}.
 
-## COLOCAR EXPLICAÇÃO
+Como podemos observar na Figura \ref{imgExCasoUso} a recepcionista do médico realiza a transferência de dados para o sistema de registro de pacientes.
 
 \FloatBarrier
 \begin{figure}[!htb]
@@ -235,7 +235,7 @@ Um modelo de domínio exibe como está organizado o sistema em termos de seus comp
 
 De acordo com \citet{Sommerville2011}, ``os diagramas de classe são utilizados no desenvolvimento de um modelo de sistema orientado a objetos para mostrar as classes de um sistema e as associações entre essas classes".
 
-Um modelo de domínio é uma representação visual de classes conceituais, ou objetos do mundo real, em um domínio \cite{Larman2007}. Também são conhecidos como modelos conceituais. 
+Um modelo de domínio é uma representação visual de classes conceituais, ou objetos do mundo real, em um domínio \cite{Larman2007}. Também são conhecidos como modelos conceituais.
 
 \section{Projeto de Arquitetura}
 
@@ -247,7 +247,7 @@ Na arquitetura em camadas encontram-se todas as camadas do \textit{software}, e 
 
 \section{Usabilidade}
 
-Sistemas devem ser fáceis de usar e de aprender, flexíveis e devem despertar nas pessoas uma boa atitude. A usabilidade é a principal busca da \ac{IHC}. 
+Sistemas devem ser fáceis de usar e de aprender, flexíveis e devem despertar nas pessoas uma boa atitude. A usabilidade é a principal busca da \ac{IHC}.
 
 De acordo com \citet{Benyon2011}, um sistema com usabilidade terá as seguintes características:
 
@@ -259,23 +259,21 @@ De acordo com \citet{Benyon2011}, um sistema com usabilidade terá as seguintes c
 	\item Terá um alto grau de utilidade no sentido de que fará as coisas que as pessoas querem que sejam feitas.
 \end{itemize}
 
-O portal de algoritmos atual apresenta algumas telas confusas, que podem ser observadas no capítulo \ref{cpProposta} na seção \ref{scPrototipos}. Esse trabalho pretende melhorá-las.
+O portal de algoritmos atual apresenta algumas telas confusas, que podem ser observadas no Capítulo \ref{cpProposta} na Seção \ref{scPrototipos}. Esse trabalho pretende melhorá-las.
 
 Até aqui foram apresentadas as metodologias que serão utilizadas na evolução do aplicativo. Na seção seguinte serão apresentadas as tecnologias escolhidas para a evolução do gerenciamento do portal de algoritmos.
 
 \section{Tecnologias}
 
-Nesta seção serão descritas as tecnologias que vão ser utilizadas na evolução do portal de algoritmos, tais como a linguagem de programação \textit{Java}, \ac{REST} e \textit{AngularJS}.
-
-São tecnologias bem consolidades no mercado, com \textit{upgrade} garantido por tempo indeterminado, mantidas por empresas sérias e de grande porte.
+Nesta seção serão descritas as tecnologias que vão ser utilizadas na evolução do portal de algoritmos, tais como a linguagem de programação \textit{Java}, \ac{REST} e \textit{AngularJS}. São tecnologias bem consolidades no mercado, com \textit{upgrade} garantido por tempo indeterminado, mantidas por empresas sérias e de grande porte.
 
 \subsection{Python e Django}
 
-O \textit{Python} é uma linguagem interpretada de alto nível, criada por Guido Van Rossum em 1989 e lançada em 1991 e atualmente possui o modelo de desenvolvimento comunitário \cite{Python2015}. Com o auxilio do \textit{framework Django}, criado originalmente para gerenciar conteúdos de um jornal da cidade de Lawrence, no Kansas, é possível definir a modelagem de dados através de classes \textit{Python} e gerar tabelas do banco de dados para manipulação sem a necessidade de \ac{SQL} \cite{Django2015}.
+O \textit{Python} é uma linguagem interpretada de alto nível, criada por Guido Van Rossum em 1989 e lançada em 1991 e atualmente possui o modelo de desenvolvimento comunitário \cite{Python2015}. Com o auxílio do \textit{framework Django}, criado originalmente para gerenciar conteúdos de um jornal da cidade de Lawrence, no Kansas, é possível definir a modelagem de dados através de classes \textit{Python} e gerar tabelas do banco de dados para manipulação sem a necessidade de \ac{SQL} \cite{Django2015}.
 
 \subsection{Java EE}
 
-A linguagem java é uma linguagem de programação orientada a objetos, com portabilidade, independência de plataforma, extensas bibliotecas de rotinas que facilitam recursos de rede e segurança, podendo executar programas via rede com restrições de execuções \cite{Java2015}. 
+A linguagem Java é uma linguagem de programação orientada a objetos, com portabilidade, independência de plataforma, extensas bibliotecas de rotinas que facilitam recursos de rede e segurança, podendo executar programas via rede com restrições de execuções \cite{Java2015}.
 
 Além disso, ela se destaca com a similaridade de sintaxe da linguagem C/C++, facilidade de internacionalização, simplicidade nas especificações, entre outras \cite{Java2015}.
 
@@ -283,13 +281,13 @@ O \ac{JAVA EE} é uma série de especificações que descrevem como deve ser impleme
 
 \subsection{WildFly}
 
-O servidor de aplicação \textit{WildFly} implementa a mais recente versão do \ac{JAVA EE}, sendo mantido pela \textit{Red Hat} \cite{Wildfly2015}. 
+O servidor de aplicação \textit{WildFly} implementa a mais recente versão do \ac{JAVA EE}, sendo mantido pela \textit{Red Hat} \cite{Wildfly2015}.
 
-Os \textit{frameworks} que compõem o \ac{JAVA EE} são fortemente testado em diversas combinações. De acordo com padrões com os quais o servidor foi desenvolvido o desenvolvedor pode focar nas regras de negócio e utilizar-se dos recursos de infraestrutura fornecidas pelo \textit{framework} \cite{Wildfly2015}. 
+Os \textit{frameworks} que compõem o \ac{JAVA EE} são fortemente testado em diversas combinações. De acordo com padrões com os quais o servidor foi desenvolvido o desenvolvedor pode focar nas regras de negócio e utilizar-se dos recursos de infraestrutura fornecidas pelo \textit{framework} \cite{Wildfly2015}.
 
 \subsection{DAO}
 
-\ac{DAO} é um mecanismo de acesso para trabalhar com fonte de dados, essa fonte de dados pode ser um banco de dados relacional, banco de dados orientado a objetos entre outros \cite{Deepak2004}. 
+\ac{DAO} é um mecanismo de acesso para trabalhar com fonte de dados, essa fonte de dados pode ser um banco de dados relacional, banco de dados orientado a objetos entre outros \cite{Deepak2004}.
 
 Com \ac{DAO} é possível adaptar a diferentes esquemas de armazenamento sem afetar outros componentes de negócio, basicamente o \ac{DAO} atua como um adaptador entre o componente e a fonte de dados \cite{Deepak2004}.
 
@@ -297,11 +295,11 @@ Com \ac{DAO} é possível adaptar a diferentes esquemas de armazenamento sem afeta
 
 O \ac{REST} não é um protocolo, é um formato de arquivo ou uma estrutura de desenvolvimento. \ac{REST} é uma solução simples baseada em \ac{HTTP} utilizando-se dos verbos desse protocolo. As princípios fundamentais do \ac{REST} são: dê a todas as coisas um identificador, vincule as coisas, utilize métodos padronizados, recursos com múltiplas representações e comunique sem estado \cite{Rest2000}.
 
-O \ac{REST} possui um conjunto de operações bem definidas, os mais importantes são \textit{GET}, \textit{POST}, \textit{PUT} e \textit{DELETE} \cite{Restful2013}. Conforme \cite{Rest2000}, \ac{REST} é um modelo de arquitetura bem definido para servir aplicações \textit{WEB}.  
+O \ac{REST} possui um conjunto de operações bem definidas, os mais importantes são \textit{GET}, \textit{POST}, \textit{PUT} e \textit{DELETE} \cite{Restful2013}. Conforme \cite{Rest2000}, \ac{REST} é um modelo de arquitetura bem definido para servir aplicações \textit{WEB}.
 
 \subsection{AngularJS}
 
-AngularJS foi criado por Misko Hevery e Adam Abrons em 2009, sendo seu código fonte aberto (\textit{Open Source}). Ele é um \textit{framework JavaScript} que é executado no navegador de internet do usuário, através do qual é possível aumentar sua produtividade no desenvolvimento \textit{WEB} \cite{Angular2014}.
+\textit{AngularJS} foi criado por Misko Hevery e Adam Abrons em 2009, sendo seu código fonte aberto (\textit{Open Source}). Ele é um \textit{framework JavaScript} que é executado no navegador de internet do usuário, através do qual é possível aumentar sua produtividade no desenvolvimento \textit{WEB} \cite{Angular2014}.
 
 \textit{AngularJs} foi construído com a crença de que a programação declarativa é a melhor escolha para a construção de intefaces de usuários. Para isso, o \textit{AngularJs} aumenta o vocabulário do \ac{HTML} padrão, tornando a vida dos desenvolvedores mais fácil \cite{Angular2014}.
 
@@ -313,12 +311,12 @@ Uma aplicação em \textit{AngularJS} trabalha com \ac{HTML} e \ac{MVC}, mas també
 
 A \textit{View} é escrita em \ac{HTML} que faz com que \textit{web designers} e programadores trabalhem lado a lado, com a ajuda das diretivas, que são um tipo de extensão do vocabulário \ac{HTML}, que traz a capacidade de executar tarefas de linguagem de programação \cite{Angular2014}.
 
-Atrás da \textit{View} existe um \textit{Controller}, que contém toda a lógica do negócio usado pela \textit{View}. 
+Atrás da \textit{View} existe um \textit{Controller}, que contém toda a lógica do negócio usado pela \textit{View}.
 
 A conexão entre a visão e o controlador é feita por um objeto compartilhado
 chamado \textit{scope}. Ele está localizado entre eles e é usado para trocar informações relacionados com o \textit{Model}.
 
-A figura \ref{imgAngularJS} representa a interação entre os componentes do \textit{AngularJS}
+A Figura \ref{imgAngularJS} representa a interação entre os componentes do \textit{AngularJS}
 
 \FloatBarrier
 \begin{figure}[!htb]
@@ -336,6 +334,6 @@ A figura \ref{imgAngularJS} representa a interação entre os componentes do \text
 
 O objetivo de um ambiente virtual de aprendizagem é de facilitar o acesso de alunos ao ensino, práticas de exercícios e livros online para consulta. Na Universidade de Caxias do Sul o \ac{AVA} já é utilizado desde meados de 2005, onde é possível acessar os materiais disponibilizados pelos professores em suas respectivas disciplinas, podendo também acompanhar o cronograma, entre outras funcionalidades \cite{Oliveira2004, Valentini2005}.
 
-O portal de algoritmos é um ambiente virtual de aprendizagem utilizado pelos alunos da \ac{UCS} nas disciplinas do \ac{CCET}, o portal tem por objetivo auxiliar no ensino da lógica de programação através da linguagem do português estruturado \cite{Dorneles2004}.
+O portal de algoritmos é um ambiente virtual de aprendizagem utilizado pelos alunos da \ac{UCS} nas disciplinas do \ac{CCET}. O portal tem por objetivo auxiliar no ensino da lógica de programação através da linguagem do português estruturado \cite{Dorneles2004}.
 
 Vimos até aqui todos os conceitos necessários para o desenvolvimento do trabalho, no capítulo a seguir veremos a reengenharia do portal de algoritmos atual, onde é descrita a modelagem e seus problemas de usabilidade e de tecnologia.
