--- a/conteudo/capitulo3.tex
+++ b/conteudo/capitulo3.tex
@@ -1,4 +1,4 @@
-\chapter{Reengenharia de Software}\label{cpReengenhariaSoftware}
+\chapter{Reengenharia de Software do Portal de Algoritmos da UCS}\label{cpReengenhariaSoftware}
 
 Nesse capítulo é descrita a situação atual do sistema, sua modelagem e arquitetura.
 
@@ -9,22 +9,22 @@ O diagrama de classe de domínio é a representação visual de classes conceituais,
 Durante a tradução do código fonte dos modelos de classes do \textit{Django}, foi constatada nenhuma padronização em nomes de váriaveis e classes. Abaixo algumas considerações:
 
 \begin{itemize}
-	\item Os campos não possuem nomes padronizados utilizando \textit{CamelCase}
-	\item Nomes de campos escritos em inglês e em português
-	\item Nomes de classes escritos em inglês e em português
-	\item Nomes de classes não são intuitivos quanto ao seu objetivo
+	\item Os campos não possuem nomes padronizados utilizando \textit{CamelCase};
+	\item Nomes de campos escritos em inglês e em português;
+	\item Nomes de classes escritos em inglês e em português;
+	\item Nomes de classes não são intuitivos quanto ao seu objetivo;
 \end{itemize}
 
-\textit{CamelCase} é a denominação em inglês para a prática de escrever palavras compostas, onde cada palavra é iniciada com minúscula ou maiúscula e unidas sem espaço. Exemplo: 
+\textit{CamelCase} é a denominação em inglês para a prática de escrever palavras compostas, onde cada palavra é iniciada com minúscula ou maiúscula e unidas sem espaço. Exemplo:
 
 \begin{itemize}
-	\item lowerCamelCase
-	\item UpperCamelCase
+	\item lowerCamelCase;
+	\item UpperCamelCase;
 \end{itemize}
 
 \newpage
 
-A figura \ref{imgDominio} representa as classes do portal que é utilizado atualmente. 
+A Figura \ref{imgDominio} representa as classes do portal que é utilizado atualmente.
 
 \FloatBarrier
 \begin{figure}[!htb]
@@ -40,15 +40,15 @@ Abaixo é descrito o que cada classe representa no \textit{software} atual, visa-
 
 \subsection{User}
 
-\textit{User} representa os usuários. O usuário tem algumas funções importantes no sistema, somente com ele é possível ter acesso a áreas restritas, bem como resolver os exercícios do portal.
+\textit{User} representa os usuários. O usuário tem algumas funções importantes no sistema. Sendo somente com ele é possível ter acesso a áreas restritas, bem como resolver os exercícios do portal.
 
 \subsection{Groups}
 
-\textit{Group} representa os grupos do \ac{ORM} do \textit{framework django}. Essa classe tem por objetivo agrupar usuários com determinadas permissões, mas para o sistema atual ela não é utilizada.
+\textit{Group} representa os grupos do \ac{ORM} do \textit{framework Django}. Essa classe tem por objetivo agrupar usuários com determinadas permissões, mas para o sistema atual ela não é utilizada.
 
 \subsection{Permission}
 
-\textit{Permission} corresponde às permissões utilizadas no sistema. Tem por objetivo definir permissões de acesso ao sistema, como por exemplo se um usuário que possui acesso ao gerenciamento do portal pode cadastrar um aluno ou um novo problema.
+\textit{Permission} corresponde às permissões utilizadas no sistema. Tem por objetivo definir permissões de acesso ao sistema, como por exemplo se um usuário que possui acesso ao gerenciamento do portal esse pode cadastrar um aluno ou um novo problema.
 
 \subsection{ContentType}
 
@@ -64,15 +64,15 @@ Professor corresponde aos professores que podem cadastrar problemas no sistema. 
 
 \subsection{Turma}
 
-Turma corresponde a turmas cadastradas no sistema. Turmas são usadas para agrupar alunos. Essa classe não é utilizada no sistema atual.
+Turma corresponde a turmas cadastradas no sistema. As turmas são usadas para agrupar alunos. Essa classe não é utilizada no sistema atual.
 
 \subsection{Problema}
 
-Problema corresponde aos problemas. Essa classe representa todas as informações correspondentes ao problema. Somente administradores do portal tem permissão para gravar infomações. Essas permissões não são controladas pela classe de domínio \textit{Permission}. Esse controle funciona através do campo \textit{is\_superuser} da classe de domínio \textit{User}.
+Problema corresponde aos problemas. Essa classe representa todas as informações correspondentes a um problema. Somente administradores do portal tem permissão para gravar infomações. Essas permissões não são controladas pela classe de domínio \textit{Permission}. Esse controle funciona através do campo \textit{is\_superuser} da classe de domínio \textit{User}.
 
 \subsection{Pchave}
 
-Pchave corresponde às palavras-chave. Representa uma palavra-chave que é utilizada no modelo a seguir. Palavras-chave é um facilitador para a pesquisa de problemas.
+Pchave corresponde às palavras-chave. Representa uma palavra-chave que é um facilitador para a pesquisa de problemas.
 
 \subsection{PchaveProb}
 
@@ -94,7 +94,7 @@ Nessa seção são descritas as interfaces gráficas atuais do software, bem como os
 
 \subsection{Cadastro de Aluno}
 
-A figura \ref{imgCadastroAluno} é a interface de Cadastro de  Aluno, que é realizado pelo próprio aluno. As informações do aluno serão mantidas nas intefaces novas, mantendo assim consistência nas informações dos mesmos.
+A Figura \ref{imgCadastroAluno} é a interface de Cadastro de  Aluno, que é realizado pelo próprio aluno. As informações do aluno serão mantidas nas intefaces novas, mantendo assim consistência nas informações dos mesmos.
 
 \FloatBarrier
 \begin{figure}[!htb]
@@ -110,13 +110,12 @@ Problemas encontrados:
 
 \begin{itemize}
 	\item \textit{Java Applet} que funciona somente no Internet Explorer após algumas configurações nas exceções do \textit{Java}.
-	\item Pouca Usabilidade.
-		\subitem O cadastro do aluno está na mesma interface da programação de algoritmos.
+	\item Pouca Usabilidade, uma vez que o cadastro do aluno está na mesma interface da programação de algoritmos.
 \end{itemize}
 
 \subsection{Criação de Solução de Problemas}
 
-A figura \ref{imgProblemaSelecionado} exibe um aluno já autenticado no portal e um problema e sua solução já selecionados. Nessa interface gráfica encontramos as seguintes funcionalidades:
+A Figura \ref{imgProblemaSelecionado} exibe um aluno já autenticado no portal e um problema e sua solução já selecionados. Nessa interface gráfica encontramos as seguintes funcionalidades:
 
 \begin{itemize}
 	\item Criar nova solução.
@@ -138,8 +137,7 @@ Problemas encontrados:
 
 \begin{itemize}
 	\item \textit{Java Applet} que funciona somente no Internet Explorer após algumas configurações nas exceções do \textit{Java}.
-	\item Pouca Usabilidade.
-		\subitem Para selecionar outro problema são necessárias diversas confirmações antes de executar a ação.
+	\item Pouca Usabilidade, uma vez que para selecionar outro problema são necessárias diversas confirmações antes de executar a ação.
 \end{itemize}
 \FloatBarrier
 
@@ -147,11 +145,11 @@ Problemas encontrados:
 
 \subsection{Gerenciamento de Alunos}
 
-A figura \ref{imgAdministracaodeAlunos} é a interface de gerenciamento de alunos. Nessa interface encontramos as seguintes funcionalidades:
+A Figura \ref{imgAdministracaodeAlunos} é a interface de gerenciamento de alunos. Nessa interface encontramos as seguintes funcionalidades:
 
 \begin{itemize}
-	\item Pesquisa de problemas: É possível realizar uma pesquisa livre, entendendo-se por livre qualquer palavra digitada no campos de pesquisa.
-	\item Pesquisa de alunos: É possível realizar uma pesquisa livre, entendendo-se por livre qualquer palavra digitada no campos de pesquisa.
+	\item Pesquisa de problemas: é possível realizar uma pesquisa livre, entendendo-se por livre qualquer palavra digitada no campos de pesquisa.
+	\item Pesquisa de alunos: é possível realizar uma pesquisa livre, entendendo-se por livre qualquer palavra digitada no campos de pesquisa.
 	\item Selecionando um problema, automaticamente o sistema faz uma pesquisa dos alunos que já solucionaram o problema, e selecionando o aluno é realizada uma pesquisa para encontrar as soluções desse aluno.
 	\item Selecionando um aluno, automaticamente o sistema faz uma pesquisa dos problemas que esse aluno já resolveu, e selecionando o problema é realizada uma pesquisa para encontrar as soluções desse aluno.
 \end{itemize}
@@ -169,20 +167,21 @@ A figura \ref{imgAdministracaodeAlunos} é a interface de gerenciamento de alunos
 Problemas encontrados:
 
 \begin{itemize}
-	\item Pouca Usabilidade.
-		\subitem Campos dispostos na interface de maneira pouco intuitiva ao usuário.
+	\item Pouca Usabilidade, uma vez que os campos dispostos na interface de maneira pouco intuitiva ao usuário.
 \end{itemize}
 
 \subsection{Gerenciamento de Problemas}
 
-A figura \ref{imgAdministracaodeProblemas} é a interface de gerenciamento de problemas. Nessa interface encontramos as seguintes funcionalidades:
+A Figura \ref{imgAdministracaodeProblemas} é a interface de gerenciamento de problemas. Nessa interface encontramos as seguintes funcionalidades:
 
 \begin{itemize}
 	\item Cadastrar novo problema
-	\item Editar um problema
-	\subitem Alterar descrição e dicas
-	\subitem Alterar palavras-chave
-	\subitem Alterar entradas e saídas
+	\item Editar um problema:
+	\begin{itemize}
+		\subitem Alterar descrição e dicas
+		\subitem Alterar palavras-chave
+		\subitem Alterar entradas e saídas
+	\end{itemize}
 \end{itemize}
 
 \FloatBarrier
@@ -199,16 +198,18 @@ Problemas encontrados:
 
 \begin{itemize}
 	\item Pouca Usabilidade.
+	\begin{itemize}
 		\subitem Campos dispostos na interface de maneira pouco intuitiva ao usuário.
 		\subitem Não possui campo de pesquisa.
 		\subitem Ações descentralizadas que confundem o usuário.
+	\end{itemize}
 \end{itemize}
 
 \newpage
 
 \subsection{Edição de Palavra-Chave}
 
-A figura \ref{imgAdministracaodeProblemasPalavraChave} mostra a mensagem de sucesso após a edição de alguma informação do problema.
+A Figura \ref{imgAdministracaodeProblemasPalavraChave} mostra a mensagem de sucesso após a edição de alguma informação do problema.
 
 \FloatBarrier
 \begin{figure}[!htb]
@@ -223,15 +224,14 @@ A figura \ref{imgAdministracaodeProblemasPalavraChave} mostra a mensagem de suce
 Problemas encontrados:
 
 \begin{itemize}
-	\item Pouca Usabilidade
-		\subitem A mensagem não possui uma informação clara do que foi editado, ou o que foi realizado.
+	\item Pouca Usabilidade: a mensagem não possui uma informação clara do que foi editado, ou o que foi realizado.
 \end{itemize}
 
 \newpage
 
 \subsection{Solução de Problemas}
 
-A figura \ref{imgAdministracaodeProblemasSolucao} exibe a solução de um problema em uma nova janela. 
+A Figura \ref{imgAdministracaodeProblemasSolucao} exibe a solução de um problema em uma nova janela.
 
 \FloatBarrier
 \begin{figure}[!htb]
@@ -247,12 +247,14 @@ Problemas encontrados:
 
 \begin{itemize}
 	\item Pouca Usabilidade.
+	\begin{itemize}
 		\subitem A nova janela que é aberta é muito pequena e sem a possibilidade de aumentar.
 		\subitem Não é possível editar.
+	\end{itemize}
 \end{itemize}
 
 
-Os problemas encontrados no \textit{software} atual prejudicam a usabilidade do mesmo. Atualmente ele está limitado a apenas um navegador de internet, no caso o \textit{Internet Explorer}. 
+Os problemas encontrados no \textit{software} atual prejudicam a usabilidade do mesmo. Atualmente ele está limitado a apenas um navegador de internet, no caso o \textit{Internet Explorer}.
 
 Para solucionar e deixá-lo mais usável, fazendo com que mais alunos sejam beneficiados pelo portal, bem como facilitando o uso por parte dos professores,  no próximo capítulo será descrita toda a modelagem, novas interfaces e novas funcionalidades, utilizando-se de tecnologias mais atuais.
 
