--- a/conteudo/capitulo2.tex
+++ b/conteudo/capitulo2.tex
@@ -80,7 +80,7 @@ Na seção seguinte é descrita a Engenharia de \textit{software} e suas respectiva
 
 Engenharia de \textit{software} é uma disciplina cujo foco está em todos os aspectos da produção de software, partindo dos estágios iniciais da especificação do \textit{software} até sua manutenção, quando o \textit{software} já está em funcionamento \cite{Sommerville2011}. De acordo com \citet{Rezende2005}, ``é a metodologia de desenvolvimento e manutenção de sistemas modulares, com as as seguintes características: processo dinâmico, integrado e inteligente de soluções tecnológicas; adequação aos requisitos funcionais do negócio do cliente e seus respectivos procedimentos pertinentes; efetivação de padrões de qualidade, produtividade e efetividade em suas atividades e produtos; fundamentação da Tecnologia da Informação disponível, viável, oportuna e personalizada; planejamento e gestão de atividades, recursos, custos e datas".
 
-Conforme podemos ver na Figura \ref{imgCamadasEngenhariaSoftware}, a engenharia de \textit{software} é uma tecnologia em camadas. A base para a engenharia de \textit{software} é a camada de processos. O processo de engenharia de \textit{software} é a conexão entre as camadas de tecnologia coesa e possibilita o desenvolvimento do \textit{software} \cite{Pressman2011}.
+Conforme podemos ver na Figura \ref{imgCamadasEngenhariaSoftware}, a engenharia de \textit{software} é uma tecnologia em camadas. A base para a engenharia de \textit{software} é a camada de processos. O processo de engenharia de \textit{software} é a método que permite manter as camadas de tecnologia coesa e possibilita o desenvolvimento do \textit{software} \cite{Pressman2011}.
 
 \FloatBarrier
 \begin{figure}[!htb]
@@ -248,6 +248,8 @@ Na arquitetura em camadas encontram-se todas as camadas do \textit{software}, e 
 \section{Usabilidade}
 
 Sistemas devem ser fáceis de usar e de aprender, flexíveis e devem despertar nas pessoas uma boa atitude. A usabilidade é a principal busca da \ac{IHC}.
+
+EXPLICAR A IMPORTANCIA DO IHC
 
 De acordo com \citet{Benyon2011}, um sistema com usabilidade terá as seguintes características:
 
