--- a/conteudo/capitulo3.tex
+++ b/conteudo/capitulo3.tex
@@ -178,9 +178,9 @@ A Figura \ref{imgAdministracaodeProblemas} é a interface de gerenciamento de pro
 	\item Cadastrar novo problema
 	\item Editar um problema:
 	\begin{itemize}
-		\subitem Alterar descrição e dicas
-		\subitem Alterar palavras-chave
-		\subitem Alterar entradas e saídas
+		\item Alterar descrição e dicas
+		\item Alterar palavras-chave
+		\item Alterar entradas e saídas
 	\end{itemize}
 \end{itemize}
 
@@ -199,9 +199,9 @@ Problemas encontrados:
 \begin{itemize}
 	\item Pouca Usabilidade.
 	\begin{itemize}
-		\subitem Campos dispostos na interface de maneira pouco intuitiva ao usuário.
-		\subitem Não possui campo de pesquisa.
-		\subitem Ações descentralizadas que confundem o usuário.
+		\item Campos dispostos na interface de maneira pouco intuitiva ao usuário.
+		\item Não possui campo de pesquisa.
+		\item Ações descentralizadas que confundem o usuário.
 	\end{itemize}
 \end{itemize}
 
@@ -248,8 +248,8 @@ Problemas encontrados:
 \begin{itemize}
 	\item Pouca Usabilidade.
 	\begin{itemize}
-		\subitem A nova janela que é aberta é muito pequena e sem a possibilidade de aumentar.
-		\subitem Não é possível editar.
+		\item A nova janela que é aberta é muito pequena e sem a possibilidade de aumentar.
+		\item Não é possível editar.
 	\end{itemize}
 \end{itemize}
 
