--- a/conteudo/capitulo4.tex
+++ b/conteudo/capitulo4.tex
@@ -20,17 +20,17 @@ Na evolução do \textit{software} serão mantidas as funcionalidades atuais e adic
 	\item Manter Países, Estados e Cidades.
 	\item Manter Tipos de Problemas.
 	\begin{itemize}
-		\subitem Manter Problemas.
-		\subitem Manter Entradas e Saídas
-		\subitem Manter Palavras-chave
-		\subitem Manter Listas de Problemas
-		\subitem Manter Soluções de Problemas
+		\item Manter Problemas.
+		\item Manter Entradas e Saídas
+		\item Manter Palavras-chave
+		\item Manter Listas de Problemas
+		\item Manter Soluções de Problemas
 	\end{itemize}
 	\item Chat para comunicação entre usuários
 	\item Relatórios.
 	\begin{itemize}
-		\subitem Relatórios de acesso: esse relatório demonstra todas as vezes que um usuário acessou o portal, podendo ser filtrado por data.
-		\subitem Relatório de problemas solucionados: esse relatório demonstra todas as soluções submetidas pelos usuários, podendo ser filtrado por data.
+		\item Relatórios de acesso: esse relatório demonstra todas as vezes que um usuário acessou o portal, podendo ser filtrado por data.
+		\item Relatório de problemas solucionados: esse relatório demonstra todas as soluções submetidas pelos usuários, podendo ser filtrado por data.
 	\end{itemize}
 \end{itemize}
 
