--- a/tcc.tex
+++ b/tcc.tex
@@ -96,7 +96,7 @@
 \vfill
 
 \begin{center}
-{\setlength{\unitlength}{1cm}\makebox(12,6.5){\parbox[c]{18cm}{\setlength{\parskip}{0.8cm}\center\vskip -1.2cm\LARGE{\bf\\\large Evolução da Ferramenta de Gerenciamento do Portal de Algoritmos da UCS}\par \normalsize por\par \large Adriano Margarin\par}}}
+\setlength{\unitlength}{1cm}\makebox(12,6.5){\parbox[c]{18cm}{\setlength{\parskip}{0.8cm}\center\vskip -1.2cm\LARGE{\bf\\\large Evolução da Ferramenta de Gerenciamento do Portal de Algoritmos da UCS}\par \normalsize por\par \large Adriano Margarin\par}}
 \end{center}
 
 {\large Trabalho de Conclusão de Curso submetido ao curso de Bacharelado em Sistemas de Informação do Centro de Ciências Exatas e da Tecnologia da Universidade de Caxias do Sul, como requisito obrigatório para graduação.}
