Ajustes até pagina 45

--- a/conteudo/capitulo1.tex
+++ b/conteudo/capitulo1.tex
@@ -10,7 +10,7 @@ Outra funcionalidade do portal é de poder acompanhar as submissões dos alunos. S
 
 No módulo de administração é possível manter todas as informações dos usuários, problemas, palavras-chave, dados de testes, dentre outras informações.
 
-Devido à constante evolução tecnológica, o portal de algoritmo ficou defasado, com problemas de compatibilidade com os navegadores atuais e pouca ou nenhuma segurança. Funcionalidades limitadas no seu gerenciamento também foram apontadas pelos usuários como alvo de melhorias.
+Devido à constante evolução tecnológica, o portal de algoritmos ficou defasado, com problemas de compatibilidade com os navegadores atuais e pouca ou nenhuma segurança. Funcionalidades limitadas no seu gerenciamento também foram apontadas pelos usuários como alvo de melhorias.
 
 As tecnologias utilizadas no desenvolvimento do portal atual, \textit{Python } versão 2.6, \textit{Django} versão 1.2, \textit{Plugins} \ac{NPAPI} (\textit{Java Applet}), estão desatualizadas ou foram descontinuadas. No caso da tecnologia \ac{NPAPI}, esta foi totalmente desativada \cite{Python2015, Django2015, NPAPI2015}.
 
