--- a/conteudo/capitulo2.tex
+++ b/conteudo/capitulo2.tex
@@ -80,7 +80,7 @@ Na seção seguinte é descrita a Engenharia de \textit{software} e suas respectiva
 
 Engenharia de \textit{software} é uma disciplina cujo foco está em todos os aspectos da produção de software, partindo dos estágios iniciais da especificação do \textit{software} até sua manutenção, quando o \textit{software} já está em funcionamento \cite{Sommerville2011}. De acordo com \citet{Rezende2005}, ``é a metodologia de desenvolvimento e manutenção de sistemas modulares, com as as seguintes características: processo dinâmico, integrado e inteligente de soluções tecnológicas; adequação aos requisitos funcionais do negócio do cliente e seus respectivos procedimentos pertinentes; efetivação de padrões de qualidade, produtividade e efetividade em suas atividades e produtos; fundamentação da Tecnologia da Informação disponível, viável, oportuna e personalizada; planejamento e gestão de atividades, recursos, custos e datas".
 
-Conforme podemos ver na Figura \ref{imgCamadasEngenhariaSoftware}, a engenharia de \textit{software} é uma tecnologia em camadas. A base para a engenharia de \textit{software} é a camada de processos. O processo de engenharia de \textit{software} é a método que permite manter as camadas de tecnologia coesa e possibilita o desenvolvimento do \textit{software} \cite{Pressman2011}.
+Conforme podemos ver na Figura \ref{imgCamadasEngenhariaSoftware}, a engenharia de \textit{software} é uma tecnologia em camadas. A base para a engenharia de \textit{software} é a camada de processos. O processo de engenharia de \textit{software} é o método que permite manter as camadas de tecnologia coesa e possibilita o desenvolvimento do \textit{software} \cite{Pressman2011}.
 
 \FloatBarrier
 \begin{figure}[!htb]
@@ -199,7 +199,7 @@ A Figura \ref{imgExSequencia} pode ser lida da seguinte maneira:
 
 A Figura \ref{imgExRobustez} representa a interação entre o usuário e as interface de um sistema, bem como todas as interações entre as interfaces.
 
-Como podemos observar na Figura \ref{imgExRobustez} o ator usuário clica no ``ícone de contatos" na tela principal, após o clique é exibido a tela de contatos, na sequência o ator clica em ``adicionar novo" no qual resulta na exibição da tela de novo contato, continuando a ação o ator preenche os campos selecionados e faz a ação de salvar contato na memória retornando assim para para tela de exibição de contatos.
+Como podemos observar na Figura \ref{imgExRobustez}, o ator usuário clica no ``ícone de contatos" na tela principal, após o clique é exibido a tela de contatos, na sequência o ator clica em ``adicionar novo" no qual resulta na exibição da tela de novo contato, continuando a ação o ator preenche os campos selecionados e faz a ação de salvar contato na memória retornando assim para para tela de exibição de contatos.
 
 \FloatBarrier
 \begin{figure}[!htb]
@@ -247,9 +247,9 @@ Na arquitetura em camadas encontram-se todas as camadas do \textit{software}, e 
 
 \section{Usabilidade}
 
-Sistemas devem ser fáceis de usar e de aprender, flexíveis e devem despertar nas pessoas uma boa atitude. A usabilidade é a principal busca da \ac{IHC}.
+Sistemas deve ser flexíveis, simples e agradáveis de usar. A usabilidade é a principal busca da \ac{IHC}, \ac{IHC} tem por objetivo produzir sistemas usáveis, seguros e funcionais.
 
-EXPLICAR A IMPORTANCIA DO IHC
+Na \ac{IHC}, a usabilidade se refere ã simplicidade e facilidade com que uma interface de um sistema pode ser utilizado. A importância do \ac{IHC} no desenvolvimento de \textit{software} é de ter uma definição de padrão visual, padrão de mensagens e prototipação e validação de telas com usuário, medindo a usabilidade e garantindo a padronização e consistência.
 
 De acordo com \citet{Benyon2011}, um sistema com usabilidade terá as seguintes características:
 
