--- a/conteudo/capitulo3.tex
+++ b/conteudo/capitulo3.tex
@@ -109,7 +109,7 @@ A Figura \ref{imgCadastroAluno} é a interface de Cadastro de  Aluno, que é reali
 Problemas encontrados:
 
 \begin{itemize}
-	\item \textit{Java Applet} que funciona somente no Internet Explorer após algumas configurações nas exceções do \textit{Java}.
+	\item \textit{Java Applet} não funciona mais em nenhum navegador de internet atual.
 	\item Pouca Usabilidade, uma vez que o cadastro do aluno está na mesma interface da programação de algoritmos.
 \end{itemize}
 
@@ -136,7 +136,7 @@ A Figura \ref{imgProblemaSelecionado} exibe um aluno já autenticado no portal e 
 Problemas encontrados:
 
 \begin{itemize}
-	\item \textit{Java Applet} que funciona somente no Internet Explorer após algumas configurações nas exceções do \textit{Java}.
+	\item \textit{Java Applet} não funciona mais em nenhum navegador de internet atual.
 	\item Pouca Usabilidade, uma vez que para selecionar outro problema são necessárias diversas confirmações antes de executar a ação.
 \end{itemize}
 \FloatBarrier
