Ajustes nos textos

--- a/conteudo/capitulo4.tex
+++ b/conteudo/capitulo4.tex
@@ -246,7 +246,7 @@ A Tabela \ref{imgManterAlunos} descreve o caso de uso de manter o cadastro, ediç
 
 \subsubsection{Manter Professores}
 
-A Tabela \ref{imgManterAlunos} descreve o caso de uso de manter o cadastro, edição e remoção das informações dos professores. Esse caso de uso possui um único ator, o ``Administrador" e possui duas pré-condições, ser administrador do sistema e o professor precisa estar associado a um usuário.
+A Tabela \ref{imgManterProfessores} descreve o caso de uso de manter o cadastro, edição e remoção das informações dos professores. Esse caso de uso possui um único ator, o ``Administrador" e possui duas pré-condições, ser administrador do sistema e o professor precisa estar associado a um usuário.
 
 \FloatBarrier
 \begin{table}[!htb]
@@ -310,7 +310,7 @@ A Tabela \ref{imgManterProblemas} descreve o caso de uso de manter o cadastro, e
 
 \subsubsection{Manter Palavras-chave}
 
-A Tabela \ref{imgManterEntradasSaidas} descreve o caso de uso de manter o cadastro, edição e remoção das informações das palavras-chave de um ou mais problemas.
+A Tabela \ref{imgManterPalavrasChaves} descreve o caso de uso de manter o cadastro, edição e remoção das informações das palavras-chave de um ou mais problemas.
 
 \FloatBarrier
 \begin{table}[!htb]
@@ -536,7 +536,7 @@ Os protótipos exibidos nessa seção procuram seguir os seguintes princípios de us
 
 \subsection{Cadastro de Aluno}
 
-A Figura \ref{mkCadastroAluno} é o protótipo de interface gráfica de cadastro de um novo aluno.
+A Figura \ref{mkCadastroAluno} é a interface gráfica de cadastro de um novo aluno.
 
 \FloatBarrier
 \begin{figure}[!htb]
